# cookiecutter-cmdstan-wrapper

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: build-wheels.yaml
