[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.0.1
author={{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email={{ cookiecutter.email }}
description={{ cookiecutter.project_short_description }}
long_description = file: README.md
{%- if cookiecutter.open_source_license != "Not open source" %}
license={{ cookiecutter.open_source_license }}
{%- endif %}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}

[options]
packages = find:
include_package_data = True
requires_python = >=3.8

install_requires =
    cmdstanpy>=1.2.2

[options.package_data]
* =
    *.stan

[options.extras_require]
test =
    flake8
    pytest
    mypy
    isort
    black
